--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "cSpell.words": [
         "chunker",
+        "dall",
         "GotHub",
+        "mixtral",
         "nextra",
         "Roadmap"
     ]
